--- a/style.css
+++ b/style.css
@@ -4,18 +4,23 @@ body{
 }
 h1{
     font-size: 50px;
+
     
+}
+h2{
+    font-size: 40px;
 }
 .orange-color{
     color:purple;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
     padding-left:10% ;
+    
 }
 .half-width img{
    width: 80%;
@@ -37,4 +42,34 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position:right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item{
+    box-shadow: 10px 10px 40px rgb(90, 78, 78);
+    width: 40%;
+    margin-right: 5%;
+    margin-left: 5%;
+    padding-left: 10px;
+    border-radius: 5px;
+    border-left: 10px solid;
+    
+
+}
+#web-dev-ex{
+    border-left: 7px solid;
+    border-image:linear-gradient(blue,pink);
+    border-image-slice: 1;
+}
+#full-stack-ex{
+    border-left: 7px solid;
+    border-image:linear-gradient(rgb(209, 95, 95), rgb(68, 139, 68)) ;
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
